--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,14 @@
-.App {
-  text-align: center;
+.App {  
+  color: #fff;
+}
+
+body {
+  /* background-image: url(./images/bg_2.jpg); */
+  /* background-position: center; */
+  /* background-repeat: no-repeat; */
+  /* background-size: cover;
+  background-attachment:fixed;*/
+  background-color: gray;    
 }
 
 .App-logo {
