--- a/src/components/contactMe.css
+++ b/src/components/contactMe.css
@@ -29,11 +29,11 @@ input#name, input#email {
 }
 
 textarea {
-    background-color: rgba(255, 255, 255, 0.2);
+    background-color: rgba(212, 212, 212, 0.2);
     border-top: 0px;
     border-left: 0px;
     border-right: 0px;
-    border-bottom: 2px solid #fff;
+    border-bottom: 2px solid rgb(212, 212, 212);
     margin-bottom: 10px;
 }
 
@@ -44,7 +44,7 @@ input#button {
     background-color: rgba(255, 255, 255, 0.2);
     border: 0px;
     cursor: pointer;
-    color: rgb(68, 67, 67);
+    color: rgb(202, 202, 202);
 }
 
 input#button :hover {
