--- a/src/components/technologies.css
+++ b/src/components/technologies.css
@@ -17,7 +17,7 @@
     border: 1px solid rgba(255, 255, 255, 0.6);
     border-top-left-radius: 5px;
     border-top-right-radius: 5px;
-    background-color: rgb(143, 143, 143);
+    background-color: rgba(143, 143, 143, 0.2);
     width: 33%;
 }
 
