--- a/src/components/portfolio_item.css
+++ b/src/components/portfolio_item.css
@@ -1,55 +1,202 @@
-.Project_Table {
-    border: 1px solid rgba(255, 255, 255, 0.5);
-    border-radius: 10px;
-    display: table;    
-    margin-bottom: 10px;
-    width: 100%;
-    background-color: rgba(128, 128, 128, 0.1);
-}
-.Project_Row {
-    display: table-row;
-}
-.Project_Cell {
-    display: table-cell;
-}
-.Project_Image {
-    margin-right: 10px;
-    min-width: 35%;
+/* smaller devices */
+@media (max-width: 767px) { 
+
+    .Project_Table {
+        border-top: 1px solid rgba(255, 255, 255, 0.2);
+        border-bottom: 1px solid rgba(255, 255, 255, 0.2);
+        /* border-radius: 10px; */
+        display: table;    
+        margin-bottom: 20px;
+        width: 100%;
+        background-color: rgba(128, 128, 128, 0.1);
+    }
+    .Project_Row {
+        display: table-row;
+        width: 100%;
+    }
+    .Project_Cell {
+        display: block;
+        text-align: center;
+        width: 100%;
+    }
+    /* .Project_Image {
+        min-width: 35%;
+    } */
+
+    img#projectImage {
+        width: 340px;
+    }
+
+    .Project_Desc {
+        vertical-align: top;
+        padding-bottom: 10px;
+        width: 100%;
+    }
+
+    .Project_Title {
+        font-size: 30px;
+        font-style: italic;
+        font-family: "Palatino Linotype", "Book Antiqua", Palatino, serif;
+        margin-bottom: 10px;
+    }
+
+    .Project_Description {
+        padding: 0px 5px;
+    }
+
+    .ButtonList{
+        padding: 20px;
+    }
+
+    .Button {
+        border: 1px solid rgba(255, 255, 255, 0.5);
+        border-radius: 5px;
+        padding: 5px 10px;
+        margin-right: 10px;
+        text-decoration: none;
+        color: #fff;
+    }
+
+    .BuiltWith_Title{
+        display: block;
+        font-weight: bold;
+        margin-bottom: 10px;
+    }
 }
 
-img#projectImage {
-    width: 420px;
+/* Medium devices (landscape tablets, 768px and up) */
+@media (min-width: 768px) and (max-width: 1199px) {
+
+    .Project_Table {
+        border: 1px solid rgba(255, 255, 255, 0.5);
+        border-radius: 10px;
+        display: table;    
+        margin-bottom: 10px;
+        width: 100%;
+        background-color: rgba(128, 128, 128, 0.1);
+    }
+    .Project_Row {
+        display: table-row;
+    }
+    .Project_Cell {
+        display: block;        
+        text-align: center;        
+        width: 100%;
+    }
+    .Project_Image {
+        margin-right: 10px;
+        min-width: 35%;
+    }
+
+    img#projectImage {
+        width: 420px;
+    }
+
+    .Project_Desc {
+        vertical-align: top;
+        padding-bottom: 10px;
+        width: 100%;
+    }
+
+    .Project_Title {
+        font-size: 30px;
+        font-style: italic;
+        font-family: "Palatino Linotype", "Book Antiqua", Palatino, serif;
+        margin-bottom: 10px;
+    }
+
+    .Project_Description {
+        padding: 0px 5px;
+    }
+
+    .ButtonList{
+        padding: 20px;
+    }
+
+    .BuiltWith_Title{
+        display: block;
+        font-weight: bold;
+        margin-bottom: 10px;
+        text-align: left;
+        padding-left: 20px;
+    }
+
+    .Button {
+        border: 1px solid rgba(255, 255, 255, 0.5);
+        border-radius: 5px;
+        padding: 5px 10px;
+        margin-right: 10px;
+        text-decoration: none;
+        color: #fff;
+    }
+
+    .TechUsedList {
+        display: flex;
+        width: 100%;
+        padding-left: 20px;
+    }
 }
 
-.Project_Desc {
-    vertical-align: top;
-    padding: 30px 10px;
-    width: 65%;
-}
 
-.Project_Title {
-    font-size: 30px;
-    font-style: italic;
-    font-family: "Palatino Linotype", "Book Antiqua", Palatino, serif;
-    margin-bottom: 10px;
-}
+/* Large devices (laptops/desktops, 992px and up) */
+@media (min-width: 1200px) {
 
-.ButtonList{
-    padding: 20px;
-}
+    .Project_Table {
+        border: 1px solid rgba(255, 255, 255, 0.5);
+        border-radius: 10px;
+        display: table;    
+        margin-bottom: 10px;
+        width: 100%;
+        background-color: rgba(128, 128, 128, 0.1);
+    }
+    .Project_Row {
+        display: table-row;
+    }
+    .Project_Cell {
+        display: table-cell;
+    }
+    .Project_Image {
+        margin-right: 10px;
+        min-width: 35%;
+    }
 
+    img#projectImage {
+        width: 420px;
+    }
 
-.BuiltWith_Title{
-    display: block;
-    font-weight: bold;
-    margin-bottom: 10px;
-}
+    .Project_Desc {
+        vertical-align: top;
+        padding: 30px 10px;
+        width: 65%;
+    }
 
-.Button {
-    border: 1px solid rgba(255, 255, 255, 0.5);
-    border-radius: 5px;
-    padding: 5px 10px;
-    margin-right: 10px;
-    text-decoration: none;
-    color: #fff;
+    .Project_Title {
+        font-size: 30px;
+        font-style: italic;
+        font-family: "Palatino Linotype", "Book Antiqua", Palatino, serif;
+        margin-bottom: 10px;
+    }
+
+    .ButtonList{
+        padding: 20px;
+    }
+
+    .BuiltWith_Title{
+        display: block;
+        font-weight: bold;
+        margin-bottom: 10px;
+    }
+
+    .Button {
+        border: 1px solid rgba(255, 255, 255, 0.5);
+        border-radius: 5px;
+        padding: 5px 10px;
+        margin-right: 10px;
+        text-decoration: none;
+        color: #fff;
+    }
+
+    .TechUsedList {
+        display: flex;
+    }
 }
