--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,7 @@
 
 body {
   background-image: url(./images/bg_3.png);
-  /* background-position: center; */
+  background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
   background-attachment:fixed;
