--- a/src/components/footer.css
+++ b/src/components/footer.css
@@ -1,13 +1,28 @@
 
-.Footer {
-    position: fixed;
-    bottom: 0;
-    left: 0;
-    display: inline-block;
-}
+
 
 .FooterContent {
     padding: 0px 0px 20px 5px;
     color: silver;
     font-size: 12px;
+    width: 100%;
+}
+
+/* smaller devices */
+@media (max-width: 767px) {
+
+    .Footer {        
+        display: none;
+    }
+
+}
+
+@media (min-width: 768px) {
+  
+    .Footer {
+        position: fixed;
+        bottom: 0;
+        left: 0;
+        display: inline-block;
+    }
 }
