--- a/src/components/portfolio_tech_used.css
+++ b/src/components/portfolio_tech_used.css
@@ -1,7 +1,10 @@
 .TechImage {
+    display: inline;
+}
+
+.T_Image {
     border-radius: 100%;
     height: 60px;
     width: 60px;
-    background-color: rgba(255, 255, 255, 0.5);
-    margin-right: 5px;
+    margin-right: 5px;   
 }
