--- a/src/components/technologies.css
+++ b/src/components/technologies.css
@@ -1,76 +1,118 @@
-.Technologies_Content {
-    position: absolute;
-    width: 60%;
-    display: inline-block;
-}
+/* smaller devices */
+@media (max-width: 767px) { 
 
-.Technologies_exp {
+  .Technologies_Content {
     position: absolute;
     width: 100%;
-    display: flex;    
-    margin-bottom: 200px;
-}
+    display: block;
+    margin-bottom: 100px;
+  }
 
-.Technologies_Category {
+  .Technologies_Category {
     padding: 10px;
-    margin-right: 10px;
-    border: 1px solid rgba(255, 255, 255, 0.6);
-    border-top-left-radius: 5px;
-    border-top-right-radius: 5px;
+    margin-bottom: 20px;
+    border: 1px solid rgba(255, 255, 255, 0.2);
     background-color: rgba(143, 143, 143, 0.2);
-    width: 33%;
-}
+    width: 100%;
 
-.TechList {
-    border-top: 1px solid rgba(255, 255, 255, 0.4);
-    margin-top: 30px;
-}
+  }
 
-.TechList img {
-    width: 50px;
-    margin-right: 10px;
-}
-
-h4 {
+  h4 {
     text-shadow: 0px 2px 2px rgba(43, 43, 43, 0.4);
     font-size: 30px; 
     font-family: "Palatino Linotype", "Book Antiqua", Palatino, serif;
     font-style: italic;
+  }
+
+  .TechList img {
+    width: 50px;
+    margin-right: 10px;
+  }
 }
 
+/* Medium devices (landscape tablets, 768px and up) */
+@media (min-width: 768px) and (max-width: 1199px) {
 
+  .Technologies_Content {
+    position: absolute;
+    width: 60%;
+    display: inline-block;
+  }
 
-.effect2
-{
-  position: relative;
+  .Technologies_exp {
+      position: absolute;
+      width: 100%;
+      /* display: flex;     */
+      margin-bottom: 200px;
+  }
+
+  .Technologies_Category {
+      padding: 10px;
+      margin-bottom: 20px;
+      border: 1px solid rgba(255, 255, 255, 0.6);
+      border-radius: 5px;
+      background-color: rgba(143, 143, 143, 0.2);
+      width: 100%;
+  }
+
+  .TechList {
+      border-top: 1px solid rgba(255, 255, 255, 0.4);
+      margin-top: 30px;
+  }
+
+  .TechList img {
+      width: 50px;
+      margin-right: 10px;
+  }
+
+  h4 {
+      text-shadow: 0px 2px 2px rgba(43, 43, 43, 0.4);
+      font-size: 30px; 
+      font-family: "Palatino Linotype", "Book Antiqua", Palatino, serif;
+      font-style: italic;
+  }
 }
-.effect2:before, .effect2:after
-{
-  z-index: -1;
-  position: absolute;
-  content: "";
-  bottom: 15px;
-  left: 10px;
-  width: 50%;
-  top: 80%;
-  max-width:300px;
-  background: #777;
-  -webkit-box-shadow: 0 15px 10px #777;
-  -moz-box-shadow: 0 15px 10px #777;
-  box-shadow: 0 15px 10px #777;
-  -webkit-transform: rotate(-3deg);
-  -moz-transform: rotate(-3deg);
-  -o-transform: rotate(-3deg);
-  -ms-transform: rotate(-3deg);
-  transform: rotate(-3deg);
-}
-.effect2:after
-{
-  -webkit-transform: rotate(3deg);
-  -moz-transform: rotate(3deg);
-  -o-transform: rotate(3deg);
-  -ms-transform: rotate(3deg);
-  transform: rotate(3deg);
-  right: 10px;
-  left: auto;
+
+/* Large devices (laptops/desktops, 992px and up) */
+@media (min-width: 1200px) {
+
+  .Technologies_Content {
+      position: absolute;
+      width: 60%;
+      display: inline-block;
+  }
+
+  .Technologies_exp {
+      position: absolute;
+      width: 100%;
+      display: flex;    
+      margin-bottom: 200px;
+  }
+
+  .Technologies_Category {
+      padding: 10px;
+      margin-right: 10px;
+      border: 1px solid rgba(255, 255, 255, 0.6);
+      border-top-left-radius: 5px;
+      border-top-right-radius: 5px;
+      background-color: rgba(143, 143, 143, 0.2);
+      width: 33%;
+  }
+
+  .TechList {
+      border-top: 1px solid rgba(255, 255, 255, 0.4);
+      margin-top: 30px;
+  }
+
+  .TechList img {
+      width: 50px;
+      margin-right: 10px;
+  }
+
+  h4 {
+      text-shadow: 0px 2px 2px rgba(43, 43, 43, 0.4);
+      font-size: 30px; 
+      font-family: "Palatino Linotype", "Book Antiqua", Palatino, serif;
+      font-style: italic;
+  }
 }
