update on page navigation and blog full content page

--- a/src/components/blog.css
+++ b/src/components/blog.css
@@ -60,6 +60,7 @@
     font-family: "Palatino Linotype", "Book Antiqua", Palatino, serif;
 }
 
-a {
+#readmore {
     text-decoration: none;
+    color: rgb(93, 79, 150);
 }
