--- a/src/App.css
+++ b/src/App.css
@@ -46,3 +46,24 @@ body {
     transform: rotate(360deg);
   }
 }
+
+
+
+
+h1#redirect {
+  animation: type 1s steps(15); /*delay iteration-count direction fill-mode;*/
+  overflow: hidden;
+  white-space: nowrap;
+  border-right: 2px solid #000;
+  width: 15ch;
+  font-family: consolas;
+  font-size: 50px;
+}
+@keyframes type {
+  0% {
+      width: 0ch;
+  }
+  100% {
+      width: 15ch;
+  }
+}
