--- a/src/components/contactMe.css
+++ b/src/components/contactMe.css
@@ -72,6 +72,8 @@ input#name, input#email {
     line-height: 2;
     width: 50%;
     margin-bottom: 10px;
+    color: #fff;
+    padding-left: 10px;
 }
 
 textarea {
@@ -80,7 +82,9 @@ textarea {
     border-left: 0px;
     border-right: 0px;
     border-bottom: 2px solid rgb(212, 212, 212);
-    margin-bottom: 10px;
+    margin-bottom: 10px;    
+    color: #fff;
+    padding-left: 10px;
 }
 
 textarea#message {
