--- a/src/components/blogs.css
+++ b/src/components/blogs.css
@@ -27,4 +27,31 @@
         display: inline-block;
         margin-bottom: 200px;
     }
+
+    .searchBlock {
+        background-image: linear-gradient(to right, rgba(24, 24, 24, 0.2), rgba(153, 153, 153, 0.4));
+        width: 100%;
+        margin-bottom: 10px;
+        padding: 20px 0px;
+        text-align: right;
+    }
+
+    .searchInput {
+        margin-right: 10px;
+        display: inline;
+        height: 25px;
+        color: #fff;
+        background-color: rgba(128, 128, 128, 0.5);
+        border-radius: 5px;
+        border: #b9b9b9 solid 1px;
+    }
+    .searchBtn {
+        display: inline;
+        border: 1px;
+        border-radius: 20px;
+        background-color: rgba(128, 128, 128, 0.5);
+        padding: 5px 25px;
+        margin-right: 10px;
+        cursor: pointer;
+    }
 }
