--- a/src/components/blog.css
+++ b/src/components/blog.css
@@ -10,6 +10,12 @@
         display: none;        
     }
 
+    #blogSmallIcon {
+        width: 17%;
+        margin-right: 10px;
+        width: 50px;
+    }
+
     .BlogContent {
         padding: 0px 10px;
     }
@@ -22,15 +28,17 @@
         background-image: linear-gradient(to right, rgba(24, 24, 24, 0.2), rgba(153, 153, 153, 0.4));
         margin-bottom: 10px;
         display: flex;
-        padding: 10px;
     }
 
     .BlogImage {
         display: inline;
         width: 17%;
-        /* background-color: rgba(255, 255, 255, 0.4); */
         margin-right: 10px;
         border-radius: 50%;
+    }
+    
+    #blogSmallIcon {
+        display: none;
     }
 }
 
@@ -51,6 +59,10 @@
         padding-top: 5px;
     }
 
+    #blogSmallIcon {
+        display: none;
+    }
+
     .Blog {
         padding-right: 30px;
         text-align: justify;
@@ -63,8 +75,16 @@
     font-style: italic;
     font-family: "Palatino Linotype", "Book Antiqua", Palatino, serif;
 }
+.Blog #title, #introduction, #date {
+    padding-left: 10px;
+    padding-right: 10px;
+}
+
+.Blog>#title>#titleContent {
+    vertical-align: 0.6em;
+}
 
 #readmore {
     text-decoration: none;
-    color: rgb(93, 79, 150);
+    color: rgb(233, 18, 18);
 }
