--- a/src/components/resume.css
+++ b/src/components/resume.css
@@ -5,12 +5,12 @@
         position: absolute;
         width: 100%;
         display: block;
-        padding: 10px;
+        /* padding: 10px; */
     }
     
     .ResumeContent {
         border-top: 1px solid rgba(255, 255, 255, 0.4);
-        padding: 20px;
+        /* padding: 20px; */
         width: 100%;
     }
 
@@ -27,6 +27,10 @@
         padding-top: 20px;
         margin-top: 20px;
         margin-bottom: 200px;
+    }
+
+    h5#experience_header {
+        padding-left: 5px;
     }
 }
 
