--- a/src/components/technologies.css
+++ b/src/components/technologies.css
@@ -9,12 +9,12 @@
   }
 
   .Technologies_Category {
-    padding: 10px;
+    /* padding: 10px; */
     margin-bottom: 20px;
     border: 1px solid rgba(255, 255, 255, 0.2);
     background-color: rgba(143, 143, 143, 0.2);
     width: 100%;
-
+    text-align: center;
   }
 
   h4 {
@@ -22,11 +22,16 @@
     font-size: 30px; 
     font-family: "Palatino Linotype", "Book Antiqua", Palatino, serif;
     font-style: italic;
+    padding-left: 5px;
   }
 
   .TechList img {
     width: 50px;
     margin-right: 10px;
+  }
+
+  p#tech_description {
+    padding: 0px 5px;
   }
 }
 
