--- a/src/components/blogs.css
+++ b/src/components/blogs.css
@@ -31,6 +31,15 @@
         display: inline-block;
         margin-bottom: 200px;
     }
+
+    .technologyTag {
+        color: #fff;
+        padding-right: 10px;
+        padding-left: 10px;
+        border-right: solid 1px rgba(255, 255, 255, 0.5);
+        border-left: solid 1px rgba(255, 255, 255, 0.5);
+        cursor: pointer;
+    }
 }
 
 .searchBlock {
